--- a/assets/front/css/_parts/2_0_flexslider.css
+++ b/assets/front/css/_parts/2_0_flexslider.css
@@ -21,8 +21,8 @@
 /* ------------------------------------ */
 .flexslider { margin: 0; padding: 0; }
 /* August 2020 : remove display:none for https://github.com/presscustomizr/hueman/issues/916 */
-.rtl .flexslider .slides > li { display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides > li { -webkit-backface-visibility: hidden;}
+.rtl .flexslider .slides > li { display: none; backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
+.flexslider .slides > li { backface-visibility: hidden;}
 /* Hide the slides before the JS is loaded. Avoids image jumping */
 
 .flexslider .slides > li > img, .flexslider .post-thumbnail img { width: 100%; height: auto; display: block; margin: 0 auto; }
